// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconApple /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconApple /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconApple /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconApple /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconApple /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconApple /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconApple /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconApple /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconApple /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconApple /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconApple /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconApple /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M181.8 117.3c-.2-25.2 20.6-37.3 21.5-37.9-11.7-17.1-29.9-19.4-36.4-19.7-15.5-1.6-30.3 9.1-38.2 9.1-7.9 0-20-8.9-32.9-8.7-16.9.4-32.5 9.9-41.2 25.1-17.6 30.4-4.5 75.6 12.6 100.3 8.4 12.1 18.4 25.7 31.5 25.2 12.6-.5 17.4-8.1 32.6-8.1 15.3 0 19.5 8.1 32.9 7.9 13.6-.3 22.2-12.3 30.5-24.4 9.6-14 13.6-27.6 13.8-28.3-.3-.3-26.5-10.4-26.7-40.5m-25.1-73.9c7-8.4 11.7-20.1 10.4-31.8-10 .4-22.2 6.7-29.3 15.1-6.5 7.5-12.2 19.7-10.7 31.1 11.1.8 22.6-6 29.6-14.4"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconApple /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
